--- a/src/components/taxDocument/template/Form16/pages/Form16_2/form16_2.css
+++ b/src/components/taxDocument/template/Form16/pages/Form16_2/form16_2.css
@@ -1,13 +1,11 @@
 /* form16_2 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form16_2 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form16_2 * {
@@ -73,3 +71,12 @@
     text-align: left; font-family: Arial; font-size: 10pt;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form16_2 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form16_2 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
