--- a/src/components/taxDocument/template/Form34/form34.css
+++ b/src/components/taxDocument/template/Form34/form34.css
@@ -1,84 +1,175 @@
 /* form34 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
-  .form34 {
-    width: 624pt;
-    margin: 0 auto;
-    padding-bottom: 20pt;
-  }
+    .form34 {
+        width: 624pt;
+        margin: 0 auto;
+        padding-bottom: 20pt;
+    }
 
-  .form34 * {
-    margin: 0;
-    padding: 0;
-    text-indent: 0;
-  }}
+    .form34 * {
+        margin: 0;
+        padding: 0;
+        text-indent: 0;
+    }
 }
 
 @layer components {
-  .form34 .s1 {
-    color: black; font-family:돋움체; font-style: normal; font-weight: normal; text-decoration: none; font-size: 8pt;
-  }
-  .form34 .s2 {
-    color: black; font-family:HY견고딕, serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 16.5pt;
-  }
-  .form34 .s3 {
-    color: black; font-family:HY견고딕, serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 15.5pt;
-  }
-  .form34 p {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt; margin:0pt;
-  }
-  .form34 .s4 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 11pt;
-  }
-  .form34 .s5 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt;
-  }
-  .form34 .s6 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form34 .s7 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 8pt;
-  }
-  .form34 li {
-    display: block;
-  }
-  .form34 #l1 {
-    padding-left: 0pt;
-  }
-  .form34 #l1> li>*:first-child:before {
-    content: "■ "; color: black; font-family:돋움체; font-style: normal; font-weight: normal; text-decoration: none; font-size: 8pt;
-  }
-  .form34 table, .form34 tbody {
-    vertical-align: top; overflow: visible;
-  }
-  .form34 td {
-    vertical-align: middle; text-align: center;
-  }
-  .form34 input.form-input {
-    width: calc(100% - 2pt); height: 20pt; border: none; outline: none; background: #ffffff; padding: 1pt; font-family: Arial, monospace; font-size: 8pt; box-sizing: border-box;
-  }
-  .form34 input.form-input:focus {
-    border: 0.5pt solid #999;
-  }
-  .form34 input.form-input-numeric {
-    text-align: right; font-family: Arial, monospace; font-size: 8.5pt;
-  }
-  .form34 input.form-input-text {
-    text-align: left; font-family: Arial, monospace; font-size: 8pt;
-  }
-  .form34 textarea.form-input {
-    width: calc(100% - 2pt); border: none; outline: none; background: #ffffff; padding: 1pt; font-family: Arial, monospace; font-size: 8pt; box-sizing: border-box; resize: none; overflow-y: auto;
-  }
-  .form34 textarea.form-input:focus {
-    border: 0.5pt solid #999;
-  }
-  .form34 textarea.form-input-numeric {
-    text-align: right; font-family: Arial, monospace; font-size: 8.5pt;
-  }
-  .form34 textarea.form-input-text {
-    text-align: left; font-family: Arial, monospace; font-size: 8pt;
-  }
+    .form34 .s1 {
+        color: black;
+        font-family: 돋움체;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 8pt;
+    }
+
+    .form34 .s2 {
+        color: black;
+        font-family: HY견고딕, serif;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 16.5pt;
+    }
+
+    .form34 .s3 {
+        color: black;
+        font-family: HY견고딕, serif;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 15.5pt;
+    }
+
+    .form34 p {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 10pt;
+        margin: 0pt;
+    }
+
+    .form34 .s4 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 11pt;
+    }
+
+    .form34 .s5 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form34 .s6 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form34 .s7 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 8pt;
+    }
+
+    .form34 li {
+        display: block;
+    }
+
+    .form34 #l1 {
+        padding-left: 0pt;
+    }
+
+    .form34 #l1 > li > *:first-child:before {
+        content: "■ ";
+        color: black;
+        font-family: 돋움체;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 8pt;
+    }
+
+    .form34 table, .form34 tbody {
+        vertical-align: top;
+        overflow: visible;
+    }
+
+    .form34 td {
+        vertical-align: middle;
+        text-align: center;
+    }
+
+    .form34 input.form-input {
+        width: calc(100% - 2pt);
+        height: 20pt;
+        border: none;
+        outline: none;
+        background: #ffffff;
+        padding: 1pt;
+        font-family: Arial, monospace;
+        font-size: 8pt;
+        box-sizing: border-box;
+    }
+
+    .form34 input.form-input:focus {
+        border: 0.5pt solid #999;
+    }
+
+    .form34 input.form-input-numeric {
+        text-align: right;
+        font-family: Arial, monospace;
+        font-size: 8.5pt;
+    }
+
+    .form34 input.form-input-text {
+        text-align: left;
+        font-family: Arial, monospace;
+        font-size: 8pt;
+    }
+
+    .form34 textarea.form-input {
+        width: calc(100% - 2pt);
+        border: none;
+        outline: none;
+        background: #ffffff;
+        padding: 1pt;
+        font-family: Arial, monospace;
+        font-size: 8pt;
+        box-sizing: border-box;
+        resize: none;
+        overflow-y: auto;
+    }
+
+    .form34 textarea.form-input:focus {
+        border: 0.5pt solid #999;
+    }
+
+    .form34 textarea.form-input-numeric {
+        text-align: right;
+        font-family: Arial, monospace;
+        font-size: 8.5pt;
+    }
+
+    .form34 textarea.form-input-text {
+        text-align: left;
+        font-family: Arial, monospace;
+        font-size: 8pt;
+    }
 }
