--- a/src/components/taxDocument/template/Form41/pages/Form41_2/form41_2.css
+++ b/src/components/taxDocument/template/Form41/pages/Form41_2/form41_2.css
@@ -1,13 +1,11 @@
 /* form41_2 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form41_2 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form41_2 * {
@@ -70,3 +68,12 @@
     text-align:right;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form41_2 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form41_2 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
