--- a/src/components/taxDocument/template/Form19/pages/Form19_2/form19_2.css
+++ b/src/components/taxDocument/template/Form19/pages/Form19_2/form19_2.css
@@ -1,13 +1,11 @@
 /* form19_2 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form19_2 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form19_2 * {
@@ -109,3 +107,12 @@
     text-align: center; vertical-align: middle; padding: 0; margin: 0;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form19_2 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form19_2 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
