--- a/src/components/taxDocument/template/Form22/form22.css
+++ b/src/components/taxDocument/template/Form22/form22.css
@@ -1,109 +1,227 @@
 /* form22 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
-  .form22 {
-    width: 624pt;
-    margin: 0 auto;
-    padding-bottom: 20pt;
-  }
+    .form22 {
+        width: 624pt;
+        margin: 0 auto;
+        padding-bottom: 20pt;
+    }
 
-  .form22 * {
-    margin: 0;
-    padding: 0;
-    text-indent: 0;
-  }}
+    .form22 * {
+        margin: 0;
+        padding: 0;
+        text-indent: 0;
+    }
 }
 
 @layer components {
-  .form22 .s1 {
-    color: black; font-family:Arial; font-style: normal; font-weight: normal; text-decoration: none; font-size: 8pt;
-  }
-  .form22 .s2 {
-    color: #00F; font-family:Arial; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form22 .s3 {
-    color: black; font-family:HY견고딕, serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 16.5pt;
-  }
-  .form22 p {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: bold; text-decoration: none; font-size: 11pt; margin:0pt;
-  }
-  .form22 h1 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: bold; text-decoration: none; font-size: 11pt;
-  }
-  .form22 .s4 {
-    color: black; font-family:Arial; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt;
-  }
-  .form22 .s5 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt;
-  }
-  .form22 .s6 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form22 .s7 {
-    color: black; font-family:"MS PGothic", sans-serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt;
-  }
-  .form22 .s8 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form22 .s9 {
-    color: black; font-family:"MS PGothic", sans-serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form22 li {
-    display: block;
-  }
-  .form22 #l1 {
-    padding-left: 0pt;
-  }
-  .form22 #l1> li>*:first-child:before {
-    content: "■ "; color: black; font-family:Arial; font-style: normal; font-weight: normal; text-decoration: none; font-size: 8pt;
-  }
-  .form22 li {
-    display: block;
-  }
-  .form22 #l2 {
-    padding-left: 0pt;counter-reset: d1 1;
-  }
-  .form22 #l2> li>*:first-child:before {
-    counter-increment: d1; content: counter(d1, decimal)". "; color: black; font-style: normal; font-weight: bold; text-decoration: none;
-  }
-  .form22 #l2> li:first-child>*:first-child:before {
-    counter-increment: d1 0;
-  }
-  .form22 table, .form22 tbody {
-    vertical-align: top; overflow: visible;
-  }
-  .form22 input.form-input {
-    width: calc(100% - 2pt); height: calc(100% - 2pt); border: none; outline: none; background: #ffffff; padding: 1pt; font-family: Arial, sans-serif; font-size: 10pt; box-sizing: border-box;
-  }
-  .form22 input.form-input:focus {
-    border: 0.5pt solid #999;
-  }
-  .form22 input.form-input-numeric {
-    text-align: right; font-family: Arial, sans-serif; font-size: 9pt;
-  }
-  .form22 input.form-input-text {
-    text-align: center; font-family: Arial, sans-serif; font-size: 10pt;
-  }
-  .form22 /* 두 번째 테이블의 열 너비 강제 설정 */
-table:nth-of-type(2) tr:nth-child(2) td:nth-child(1) {
-    width: 30pt !important; min-width: 30pt !important; max-width: 30pt !important;
-  }
-  .form22 table:nth-of-type(2) tr:nth-child(2) td:nth-child(2) {
-    width: 97pt !important; min-width: 97pt !important; max-width: 97pt !important;
-  }
-  .form22 table:nth-of-type(2) tr:nth-child(2) td:nth-child(3) {
-    width: 87pt !important; min-width: 87pt !important; max-width: 87pt !important;
-  }
-  .form22 table:nth-of-type(2) tr:nth-child(n+3) td:nth-child(2) {
-    width: 30pt !important; min-width: 30pt !important; max-width: 30pt !important;
-  }
-  .form22 table:nth-of-type(2) tr:nth-child(n+3) td:nth-child(3) {
-    width: 97pt !important; min-width: 97pt !important; max-width: 97pt !important;
-  }
-  .form22 table:nth-of-type(2) tr:nth-child(n+3) td:nth-child(4) {
-    width: 87pt !important; min-width: 87pt !important; max-width: 87pt !important;
-  }
+    .form22 .s1 {
+        color: black;
+        font-family: Arial;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 8pt;
+    }
+
+    .form22 .s2 {
+        color: #00F;
+        font-family: Arial;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form22 .s3 {
+        color: black;
+        font-family: HY견고딕, serif;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 16.5pt;
+    }
+
+    .form22 p {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 11pt;
+        margin: 0pt;
+    }
+
+    .form22 h1 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 11pt;
+    }
+
+    .form22 .s4 {
+        color: black;
+        font-family: Arial;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form22 .s5 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form22 .s6 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form22 .s7 {
+        color: black;
+        font-family: "MS PGothic", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form22 .s8 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form22 .s9 {
+        color: black;
+        font-family: "MS PGothic", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form22 li {
+        display: block;
+    }
+
+    .form22 #l1 {
+        padding-left: 0pt;
+    }
+
+    .form22 #l1 > li > *:first-child:before {
+        content: "■ ";
+        color: black;
+        font-family: Arial;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 8pt;
+    }
+
+    .form22 li {
+        display: block;
+    }
+
+    .form22 #l2 {
+        padding-left: 0pt;
+        counter-reset: d1 1;
+    }
+
+    .form22 #l2 > li > *:first-child:before {
+        counter-increment: d1;
+        content: counter(d1, decimal) ". ";
+        color: black;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    .form22 #l2 > li:first-child > *:first-child:before {
+        counter-increment: d1 0;
+    }
+
+    .form22 table, .form22 tbody {
+        vertical-align: top;
+        overflow: visible;
+    }
+
+    .form22 input.form-input {
+        width: calc(100% - 2pt);
+        height: calc(100% - 2pt);
+        border: none;
+        outline: none;
+        background: #ffffff;
+        padding: 1pt;
+        font-family: Arial, sans-serif;
+        font-size: 10pt;
+        box-sizing: border-box;
+    }
+
+    .form22 input.form-input:focus {
+        border: 0.5pt solid #999;
+    }
+
+    .form22 input.form-input-numeric {
+        text-align: right;
+        font-family: Arial, sans-serif;
+        font-size: 9pt;
+    }
+
+    .form22 input.form-input-text {
+        text-align: center;
+        font-family: Arial, sans-serif;
+        font-size: 10pt;
+    }
+
+    .form22 /* 두 번째 테이블의 열 너비 강제 설정 */
+    .form22 table:nth-of-type(2) tr:nth-child(2) td:nth-child(1) {
+        width: 30pt !important;
+        min-width: 30pt !important;
+        max-width: 30pt !important;
+    }
+
+    .form22 table:nth-of-type(2) tr:nth-child(2) td:nth-child(2) {
+        width: 97pt !important;
+        min-width: 97pt !important;
+        max-width: 97pt !important;
+    }
+
+    .form22 table:nth-of-type(2) tr:nth-child(2) td:nth-child(3) {
+        width: 87pt !important;
+        min-width: 87pt !important;
+        max-width: 87pt !important;
+    }
+
+    .form22 table:nth-of-type(2) tr:nth-child(n+3) td:nth-child(2) {
+        width: 30pt !important;
+        min-width: 30pt !important;
+        max-width: 30pt !important;
+    }
+
+    .form22 table:nth-of-type(2) tr:nth-child(n+3) td:nth-child(3) {
+        width: 97pt !important;
+        min-width: 97pt !important;
+        max-width: 97pt !important;
+    }
+
+    .form22 table:nth-of-type(2) tr:nth-child(n+3) td:nth-child(4) {
+        width: 87pt !important;
+        min-width: 87pt !important;
+        max-width: 87pt !important;
+    }
 }
