--- a/src/components/taxDocument/template/Form29/form29.css
+++ b/src/components/taxDocument/template/Form29/form29.css
@@ -1,90 +1,178 @@
 /* form29 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
-  .form29 {
-    width: 624pt;
-    margin: 0 auto;
-    padding-bottom: 20pt;
-  }
+    .form29 {
+        width: 624pt;
+        margin: 0 auto;
+        padding-bottom: 20pt;
+    }
 
-  .form29 * {
-    margin: 0;
-    padding: 0;
-    text-indent: 0;
-  }}
+    .form29 * {
+        margin: 0;
+        padding: 0;
+        text-indent: 0;
+    }
 }
 
 @layer components {
-  .form29 p {
-    color: black; font-family:돋움체; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt; margin:0pt;
-  }
-  .form29 .s1 {
-    color: #00F; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form29 .s2 {
-    color: black; font-family:휴먼아미체, serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 16.5pt;
-  }
-  .form29 h1 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: bold; text-decoration: none; font-size: 11pt;
-  }
-  .form29 .s3 {
-    color: black; font-family:돋움체; font-style: normal; font-weight: bold; text-decoration: none; font-size: 10pt;
-  }
-  .form29 .s4 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form29 h2 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: bold; text-decoration: none; font-size: 10pt;
-  }
-  .form29 .s5 {
-    color: black; font-family:돋움, monospace; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt;
-  }
-  .form29 li {
-    display: block;
-  }
-  .form29 #l1 {
-    padding-left: 0pt;
-  }
-  .form29 #l1> li>*:first-child:before {
-    content: "■ "; color: black; font-family:돋움체; font-style: normal; font-weight: normal; text-decoration: none; font-size: 9pt;
-  }
-  .form29 #l2 {
-    padding-left: 0pt;counter-reset: c2 1;
-  }
-  .form29 #l2> li>*:first-child:before {
-    counter-increment: c2; content: counter(c2, decimal)". "; color: black; font-style: normal; font-weight: bold; text-decoration: none;
-  }
-  .form29 #l2> li:first-child>*:first-child:before {
-    counter-increment: c2 0;
-  }
-  .form29 table, .form29 tbody {
-    vertical-align: top; overflow: visible;
-  }
-  .form29 td {
-    vertical-align: middle;
-  }
-  .form29 input.form-input {
-    width: calc(100% - 2pt); height: 20pt; border: none; outline: none; background: #ffffff; padding: 1pt; font-family: Arial, monospace; font-size: 10pt; box-sizing: border-box;
-  }
-  .form29 input.form-input:focus {
-    border: 0.5pt solid #999;
-  }
-  .form29 input.form-input-numeric {
-    text-align: right; font-family: Arial, monospace; font-size: 10pt;
-  }
-  .form29 input.form-input-text {
-    text-align: left; font-family: Arial, monospace; font-size: 10pt;
-  }
-  .form29 table input.form-input {
-    font-size: 9pt; font-family: Arial, monospace;
-  }
-  .form29 table input.form-input-numeric {
-    font-size: 9pt; font-family: Arial, monospace;
-  }
-  .form29 table input.form-input-text {
-    font-size: 9pt; font-family: Arial, monospace;
-  }
+    .form29 p {
+        color: black;
+        font-family: 돋움체;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+        margin: 0pt;
+    }
+
+    .form29 .s1 {
+        color: #00F;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form29 .s2 {
+        color: black;
+        font-family: 휴먼아미체, serif;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 16.5pt;
+    }
+
+    .form29 h1 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 11pt;
+    }
+
+    .form29 .s3 {
+        color: black;
+        font-family: 돋움체;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form29 .s4 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form29 h2 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form29 .s5 {
+        color: black;
+        font-family: 돋움, monospace;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+
+    .form29 li {
+        display: block;
+    }
+
+    .form29 #l1 {
+        padding-left: 0pt;
+    }
+
+    .form29 #l1 > li > *:first-child:before {
+        content: "■ ";
+        color: black;
+        font-family: 돋움체;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: none;
+        font-size: 9pt;
+    }
+
+    .form29 #l2 {
+        padding-left: 0pt;
+        counter-reset: c2 1;
+    }
+
+    .form29 #l2 > li > *:first-child:before {
+        counter-increment: c2;
+        content: counter(c2, decimal) ". ";
+        color: black;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    .form29 #l2 > li:first-child > *:first-child:before {
+        counter-increment: c2 0;
+    }
+
+    .form29 table, .form29 tbody {
+        vertical-align: top;
+        overflow: visible;
+    }
+
+    .form29 td {
+        vertical-align: middle;
+    }
+
+    .form29 input.form-input {
+        width: calc(100% - 2pt);
+        height: 20pt;
+        border: none;
+        outline: none;
+        background: #ffffff;
+        padding: 1pt;
+        font-family: Arial, monospace;
+        font-size: 10pt;
+        box-sizing: border-box;
+    }
+
+    .form29 input.form-input:focus {
+        border: 0.5pt solid #999;
+    }
+
+    .form29 input.form-input-numeric {
+        text-align: right;
+        font-family: Arial, monospace;
+        font-size: 10pt;
+    }
+
+    .form29 input.form-input-text {
+        text-align: left;
+        font-family: Arial, monospace;
+        font-size: 10pt;
+    }
+
+    .form29 table input.form-input {
+        font-size: 9pt;
+        font-family: Arial, monospace;
+    }
+
+    .form29 table input.form-input-numeric {
+        font-size: 9pt;
+        font-family: Arial, monospace;
+    }
+
+    .form29 table input.form-input-text {
+        font-size: 9pt;
+        font-family: Arial, monospace;
+    }
 }
