--- a/src/components/taxDocument/template/Form32/pages/Form32_1/form32_1.css
+++ b/src/components/taxDocument/template/Form32/pages/Form32_1/form32_1.css
@@ -1,13 +1,11 @@
 /* form32 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form32 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form32 * {
@@ -82,3 +80,12 @@
     text-align: left; font-family: Arial, monospace; font-size: 10pt;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form32 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form32 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
