--- a/src/components/taxDocument/template/Form39/pages/Form39_1/form39_1.css
+++ b/src/components/taxDocument/template/Form39/pages/Form39_1/form39_1.css
@@ -1,13 +1,11 @@
 /* form39 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form39 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form39 * {
@@ -109,3 +107,12 @@
     vertical-align: middle;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form39 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form39 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
