--- a/src/components/taxDocument/template/Form41/pages/Form41_1/form41_1.css
+++ b/src/components/taxDocument/template/Form41/pages/Form41_1/form41_1.css
@@ -1,13 +1,11 @@
 /* form41 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form41 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form41 * {
@@ -112,3 +110,12 @@
     vertical-align: top; overflow: visible;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form41 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form41 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
