--- a/src/components/taxDocument/template/Form47/pages/Form47_2/form47_2.css
+++ b/src/components/taxDocument/template/Form47/pages/Form47_2/form47_2.css
@@ -1,13 +1,11 @@
 /* form47_2 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form47_2 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form47_2 * {
@@ -73,3 +71,12 @@
     text-align:center;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form47_2 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form47_2 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
