--- a/src/components/taxDocument/template/Form69_2/pages/Form69_2_2/form69_2_2.css
+++ b/src/components/taxDocument/template/Form69_2/pages/Form69_2_2/form69_2_2.css
@@ -1,13 +1,11 @@
 /* form-joteuk69_2_2 Styles */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   .form-joteuk69_2_2 {
     width: 624pt;
     margin: 0 auto;
     padding-bottom: 20pt;
+    position: relative;
   }
 
   .form-joteuk69_2_2 * {
@@ -52,3 +50,12 @@
     vertical-align: top; overflow: visible;
   }
 }
+
+/* add-page button positioning (exclude bottom padding) */
+.form-joteuk69_2_2 #addTableBtn {
+  bottom: 20pt !important;
+}
+.form-joteuk69_2_2 #addThirdTableBtn {
+  bottom: 20pt !important;
+}
+
