--- a/src/components/taxDocument/template/Form21/pages/Form21_1/form21_1.css
+++ b/src/components/taxDocument/template/Form21/pages/Form21_1/form21_1.css
@@ -44,6 +44,14 @@
     background-position: center;
 }
 
+@media print {
+    .form21_1 input[type="checkbox"] {
+        display: inline-block;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+    }
+}
+
 .form21_1 input[type="radio"] {
     width: 7pt;
     height: 7pt;
